Add working components with animation.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,6 @@
 <!--<app-slides></app-slides>-->
 <!--<app-old-slides></app-old-slides>-->
 <div class="menu">MENU</div>
-<!--<div class="slides-container">-->
-<!--  <app-slide-->
-<!--    background="url('https://picsum.photos/id/1015/1200/800')"-->
-<!--    text="This is the first story text that scrolls over the slide."-->
-<!--  ></app-slide>-->
-
-<!--  <app-slide-->
-<!--    background="#2c3e50"-->
-<!--    text="Second slide with a color background."-->
-<!--  ></app-slide>-->
-<!--</div>-->
 
   <app-slide
     background="url('https://picsum.photos/id/1015/1200/800')"
@@ -24,14 +13,6 @@
     [animationStyle]="'reveal-exit'"
     style="--container-height: 300vh;"
   ></app-pinnedimage>
-
-<!--  <app-slide-->
-<!--    background="url('https://picsum.photos/id/1015/1200/800')"-->
-<!--    text="This is the first story text that scrolls over the slide."-->
-<!--    [animationStyle]="'reveal-enter'"-->
-<!--    style="&#45;&#45;container-height: 300vh;&#45;&#45;inner-top:-200vh"-->
-<!--  ></app-slide>-->
-
 <app-slide class="reveal-slide"
     background="url('https://picsum.photos/id/1015/1200/800')"
     text="This is the first story text that scrolls over the slide."
@@ -47,18 +28,38 @@
   style="--container-height: 300vh;"
 ></app-pinnedimage>
 
-<!--  <app-slide-->
-<!--    background="url('https://picsum.photos/id/1015/1200/800')"-->
-<!--    text="This is the first story text that scrolls over the slide."-->
-<!--    [animationStyle]="'reveal-enter'"-->
-<!--    style="&#45;&#45;container-height: 300vh;&#45;&#45;inner-top:-200vh"-->
-<!--  ></app-slide>-->
+<app-slide class="reveal-slide"
+           background="url('https://picsum.photos/id/1015/1200/800')"
+           text="This is the first story text that scrolls over the slide."
+           style="--container-height: 300vh;"
+           [animationStyle]="'reveal-enter'"
+
+></app-slide>
+
+<app-pinnedimage
+  background="#2c3e50"
+  text="Second slide with a color background."
+></app-pinnedimage>
+
+<app-slide
+           background="url('https://picsum.photos/id/1015/1200/800')"
+           text="This is the first story text that scrolls over the slide."
+
+></app-slide>
+
+<app-pinnedimage
+  background="#2c3e50"
+  text="Second slide with a color background."
+  [animationStyle]="'reveal-top-exit'"
+  style="--container-height: 300vh;"
+></app-pinnedimage>
+
 
 <app-slide class="reveal-slide-top"
            background="url('https://picsum.photos/id/1015/1200/800')"
            text="This is the first story text that scrolls over the slide."
            style="--container-height: 200vh;"
-           [animationStyle]="'reveal-enter'"
+           [animationStyle]="'reveal-top-enter'"
 
 ></app-slide>
 
