--- a/src/app/pinnedimage/pinnedimage.scss
+++ b/src/app/pinnedimage/pinnedimage.scss
@@ -1,6 +1,7 @@
 .slide-container {
   position: relative;
-  height: var(--container-height, 200vh);}
+  height: var(--container-height, 200vh);
+}
 
 .text-container {
   display: flex;
