--- a/src/app/app.css
+++ b/src/app/app.css
@@ -39,11 +39,11 @@
 .reveal-slide {
   z-index: -1;
   position: relative;
-  top: -200vh;
+  margin-top: -200vh;
 }
 
 .reveal-slide-top {
-  z-index: -1;
+  z-index: 1;
   position: relative;
-  top: -100vh;
+  margin-top: -100vh;
 }
