--- a/src/app/animated-slide-dragging-text/animated-slide-dragging-text.component.html
+++ b/src/app/animated-slide-dragging-text/animated-slide-dragging-text.component.html
@@ -1,7 +1,9 @@
 <div class="slide-container">
   <div class="slide-inner" #slideRef [ngStyle]="backgroundSyle()">
-    <div class="slide-text" #textRef>
-      <p>{{ text() }}</p>
+    <div class="text-container">
+      <div class="slide-text" #textRef>
+        <p>{{ text() }}</p>
+      </div>
     </div>
   </div>
 </div>
