--- a/src/app/animated-slide-dragging-text/animated-slide-dragging-text.component.scss
+++ b/src/app/animated-slide-dragging-text/animated-slide-dragging-text.component.scss
@@ -1,5 +1,12 @@
 @use '../animated-slide/generic-animated-slide' as *;
 
+.text-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .slide-inner {
   position: sticky;
   top: var(--inner-top, 0);
@@ -11,7 +18,7 @@
 
   .slide-text {
     position: absolute;
-    top: 100%; // initially below viewport
+    top: var(--text-top, 100%); // initially below viewport
     width: 100%;
     text-align: center;
     color: white;
