--- a/src/app/animated-slide-pinned-image-dragging-text/animated-slide-pinned-image-dragging-text.component.scss
+++ b/src/app/animated-slide-pinned-image-dragging-text/animated-slide-pinned-image-dragging-text.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   width: 50%;
   height: 100%;
+  position: relative;
 }
 
 .slide-inner {
@@ -17,8 +18,7 @@
 
   .slide-text {
     position: absolute;
-    top: 100%; // initially below viewport
-    width: 50%;
+    top: var(--text-top, 100%); // initially below viewport
     text-align: center;
     color: white;
     font-size: 2rem;
