--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,76 +1,13 @@
-<!--<app-slides></app-slides>-->
-<!--<app-old-slides></app-old-slides>-->
 <div class="menu">MENU</div>
-
-<!--  <app-slide-->
-<!--    background="url('https://picsum.photos/id/1015/1200/800')"-->
-<!--    text="This is the first story text that scrolls over the slide."-->
-<!--  ></app-slide>-->
-
-<!--  <app-pinnedimage-->
-<!--    background="#2c3e50"-->
-<!--    text="Second slide with a color background."-->
-<!--    [animationStyle]="'reveal-exit'"-->
-<!--    style="&#45;&#45;container-height: 300vh;"-->
-<!--  ></app-pinnedimage>-->
-<!--<app-slide class="reveal-slide"-->
-<!--    background="url('https://picsum.photos/id/1015/1200/800')"-->
-<!--    text="This is the first story text that scrolls over the slide."-->
-<!--           style="&#45;&#45;container-height: 300vh;"-->
-<!--           [animationStyle]="'reveal-enter'"-->
-
-<!--&gt;</app-slide>-->
-
-<!--<app-pinnedimage-->
-<!--  background="#2c3e50"-->
-<!--  text="Second slide with a color background."-->
-<!--  [animationStyle]="'reveal-exit'"-->
-<!--  style="&#45;&#45;container-height: 300vh;"-->
-<!--&gt;</app-pinnedimage>-->
-
-<!--<app-slide class="reveal-slide"-->
-<!--           background="url('https://picsum.photos/id/1015/1200/800')"-->
-<!--           text="This is the first story text that scrolls over the slide."-->
-<!--           style="&#45;&#45;container-height: 300vh;"-->
-<!--           [animationStyle]="'reveal-enter'"-->
-
-<!--&gt;</app-slide>-->
-
-<!--<app-pinnedimage-->
-<!--  background="#2c3e50"-->
-<!--  text="Second slide with a color background."-->
-<!--&gt;</app-pinnedimage>-->
-
-<!--<app-slide-->
-<!--           background="url('https://picsum.photos/id/1015/1200/800')"-->
-<!--           text="This is the first story text that scrolls over the slide."-->
-
-<!--&gt;</app-slide>-->
-
-<!--<app-pinnedimage-->
-<!--  background="#2c3e50"-->
-<!--  text="Second slide with a color background."-->
-<!--  [animationStyle]="'reveal-top-exit'"-->
-<!--  style="&#45;&#45;container-height: 300vh;"-->
-<!--&gt;</app-pinnedimage>-->
-
-
-<!--<app-slide class="reveal-slide-top"-->
-<!--           background="url('https://picsum.photos/id/1015/1200/800')"-->
-<!--           text="This is the first story text that scrolls over the slide."-->
-<!--           style="&#45;&#45;container-height: 200vh;"-->
-<!--           [animationStyle]="'reveal-top-enter'"-->
-
-<!--&gt;</app-slide>-->
 
 <app-animated-slide-dragging-text
   backgroundImage="'images/billy-huynh-W8KTS-mhFUE-unsplash.jpg'"
-  text="This is the first story text that scrolls over the slide."
+  text="This is a slide which has a scrolling in text"
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="Second slide with a color background."
+  text="This is a slide which has a pinned image and scrolling in text"
   [exit]="'reveal-exit'"
   image="images/xinqiao-wang-wPRthjNrGaY-unsplash.jpg"
   style="--container-height: 300vh;"
@@ -78,40 +15,41 @@
 
 <app-animated-slide-dragging-text
   backgroundImage="images/steve-busch-PkvnkMrnLFo-unsplash.jpg"
-           text="This is the first story text that scrolls over the slide."
+           text="This is a slide which has a scrolling in text and is revealed from the bottom"
            [enter]="'reveal-enter'"
 
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="Second slide with a color background."
+  text="This is a slide which has a pinned image and scrolling in text"
   [exit]="'reveal-exit'"
   image="images/slava-auchynnikau-DjPMpSqHxPs-unsplash.jpg"
 ></app-animated-slide-pinned-image-dragging-text>
 
 <app-animated-slide-dragging-text
   backgroundImage="images/marco-d-abramo-U41hNCYjWdM-unsplash.jpg"
-           text="This is the first story text that scrolls over the slide."
+           text="This is an unanimated slide which is revealed from the bottom"
            [enter]="'reveal-enter'"
+          [isAnimated]="false"
 
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="Second slide with a color background."
+  text="This is an unanimated slide with image and text"
+  [isAnimated]="false"
   image="images/jessica-brown-Hw9XTtRUXgM-unsplash.jpg"
 ></app-animated-slide-pinned-image-dragging-text>
 
 <app-animated-slide-dragging-text
   backgroundImage="images/ingmar-ft7NpsXuAO4-unsplash.jpg"
-  text="This is the first story text that scrolls over the slide."
-
+  text="This is an animated slide with text sliding in"
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="Second slide with a color background."
+  text="This is an animated slide with pinned image and text sliding in"
   image="images/evgeni-tcherkasski-Ju7ZiCwu3DU-unsplash.jpg"
   [exit]="'reveal-top-exit'"
 ></app-animated-slide-pinned-image-dragging-text>
@@ -119,7 +57,7 @@
 
 <app-animated-slide-dragging-text
   backgroundImage="images/eric-stoynov-Asi4unAq4us-unsplash.jpg"
-           text="This is the first story text that scrolls over the slide."
+           text="This is an animated slide with text sliding in, revealed from the top"
            [enter]="'reveal-enter-top'"
            [exit]="'reveal-top-exit'"
 
@@ -127,7 +65,7 @@
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="Second slide with a color background."
+  text="This is an animated slide with pinned image and text, revealed from the top"
   [enter]="'reveal-enter-top'"
   [exit]="'reveal-top-exit'"
   image="images/deep-doshi-U_Pjpti-LzM-unsplash.jpg"
@@ -135,19 +73,52 @@
 
 <app-animated-slide-dragging-text
   backgroundImage="images/abdul-quadir-RHOA-WA3FtA-unsplash.jpg"
-  text="This is the first story text that scrolls over the slide."
+  text="This is an animated slide with text sliding in, revealed from the top"
   [enter]="'reveal-enter-top'"
   [exit]="'reveal-exit'"
-
 ></app-animated-slide-dragging-text>
 
+<!--The following four were the most problematic-->
+<!--These two are bugged if z-index is not calculated and if there is no isAnimated=false-->
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="Second slide with a color background."
+  text="This is an animated slide with pinned image and text sliding in, revealed from the bottom"
   [enter]="'reveal-enter'"
-  image="images/boliviainteligente-LigxC7tE5e4-unsplash.jpg"
-
+  [exit]="'reveal-exit'"
+  image="images/maksim-samuilionak-uymaeBza9KQ-unsplash.jpg"
 ></app-animated-slide-pinned-image-dragging-text>
+
+<app-animated-slide-dragging-text
+  backgroundImage="images/tsuyoshi-kozu-BMk5PqDozE4-unsplash.jpg"
+  text="This is an animated slide with text sliding in, revealed from the bottom"
+  [enter]="'reveal-enter'"
+  [exit]="'reveal-top-exit'"
+></app-animated-slide-dragging-text>
+
+<!--<app-animated-slide-pinned-image-dragging-text-->
+<!--  background="#2c3e50"-->
+<!--  text="This is an animated slide with pinned image and text sliding in, revealed from the bottom"-->
+<!--  [enter]="'reveal-enter'"-->
+<!--  [exit]="'reveal-exit'"-->
+<!--  image="images/maksim-samuilionak-uymaeBza9KQ-unsplash.jpg"-->
+<!--  [isAnimated]="false"-->
+<!--&gt;</app-animated-slide-pinned-image-dragging-text>-->
+
+<!--<app-animated-slide-dragging-text-->
+<!--  backgroundImage="images/tsuyoshi-kozu-BMk5PqDozE4-unsplash.jpg"-->
+<!--  text="This is an animated slide with text sliding in, revealed from the bottom"-->
+<!--  [enter]="'reveal-enter'"-->
+<!--  [exit]="'reveal-top-exit'"-->
+<!--  [isAnimated]="false"-->
+<!--&gt;</app-animated-slide-dragging-text>-->
+
+<app-animated-slide-dragging-text
+  backgroundImage="images/scott-lord-qV2xKnrSY6A-unsplash.jpg"
+  text="This is an animated slide with text sliding in, revealed from the top"
+  [enter]="'reveal-enter-top'"
+></app-animated-slide-dragging-text>
+
+
 
 
 
