Add ability to zoom in.

--- a/src/app/animated-slide-dragging-text/animated-slide-dragging-text.component.html
+++ b/src/app/animated-slide-dragging-text/animated-slide-dragging-text.component.html
@@ -1,9 +1,11 @@
 <div class="slide-container">
-  <div class="slide-inner" #slideRef [ngStyle]="backgroundSyle()">
-    <div class="text-container">
-      <div class="slide-text" #textRef>
-        <p>{{ text() }}</p>
+    <div class="slide-inner" #slideRef [ngStyle]="backgroundSyle()">
+      <div  class="slide-content" #contentRef>
+        <div class="text-container">
+          <div class="slide-text" #textRef>
+            <p>{{ text() }}</p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 </div>
