--- a/src/app/animated-slide-pinned-image-dragging-text/animated-slide-pinned-image-dragging-text.component.html
+++ b/src/app/animated-slide-pinned-image-dragging-text/animated-slide-pinned-image-dragging-text.component.html
@@ -1,11 +1,13 @@
 <div class="slide-container">
   <div class="slide-inner" #slideRef [ngStyle]="backgroundSyle()">
-    <div class="image" #imageRef>
-      <img [src]="image()" alt=""/>
-    </div>
-    <div class="text-container">
-      <div class="slide-text" #textRef>
-        <p>{{ text() }}</p>
+    <div class="slide-content" #contentRef>
+      <div class="image" #imageRef>
+        <img [src]="image()" alt=""/>
+      </div>
+      <div class="text-container">
+        <div class="slide-text" #textRef>
+          <p>{{ text() }}</p>
+        </div>
       </div>
     </div>
   </div>
