--- a/src/app/animated-slide-dragging-text/animated-slide-dragging-text.component.scss
+++ b/src/app/animated-slide-dragging-text/animated-slide-dragging-text.component.scss
@@ -15,6 +15,7 @@
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
+  scale: var(--inner-scale, 1);
 
   .slide-text {
     position: absolute;
