--- a/src/app/animated-slide-pinned-image-dragging-text/animated-slide-pinned-image-dragging-text.component.scss
+++ b/src/app/animated-slide-pinned-image-dragging-text/animated-slide-pinned-image-dragging-text.component.scss
@@ -5,6 +5,7 @@
   width: 50%;
   height: 100%;
   position: relative;
+  flex: 1;
 }
 
 .slide-inner {
@@ -15,6 +16,7 @@
   background-position: center;
   overflow: hidden;
   display: flex;
+  scale: var(--inner-scale, 1);
 
   .slide-text {
     position: absolute;
@@ -30,6 +32,7 @@
     height: 100%;
     display: flex;
     align-items: start;
+    flex: 1;
   }
 
   img {
