Add more images for showcase.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -44,12 +44,12 @@
 
 <app-animated-slide-dragging-text
   backgroundImage="images/ingmar-ft7NpsXuAO4-unsplash.jpg"
-  text="This is an animated slide with text sliding in"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="This is an animated slide with pinned image and text sliding in"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   image="images/evgeni-tcherkasski-Ju7ZiCwu3DU-unsplash.jpg"
   [exit]="'reveal-top-exit'"
 ></app-animated-slide-pinned-image-dragging-text>
@@ -57,7 +57,7 @@
 
 <app-animated-slide-dragging-text
   backgroundImage="images/eric-stoynov-Asi4unAq4us-unsplash.jpg"
-           text="This is an animated slide with text sliding in, revealed from the top"
+           text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
            [enter]="'reveal-enter-top'"
            [exit]="'reveal-top-exit'"
 
@@ -65,7 +65,7 @@
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="This is an animated slide with pinned image and text, revealed from the top"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter-top'"
   [exit]="'reveal-top-exit'"
   image="images/deep-doshi-U_Pjpti-LzM-unsplash.jpg"
@@ -73,7 +73,7 @@
 
 <app-animated-slide-dragging-text
   backgroundImage="images/abdul-quadir-RHOA-WA3FtA-unsplash.jpg"
-  text="This is an animated slide with text sliding in, revealed from the top"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter-top'"
   [exit]="'reveal-exit'"
 ></app-animated-slide-dragging-text>
@@ -82,7 +82,7 @@
 <!--These two are bugged if z-index is not calculated and if there is no isAnimated=false-->
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="This is an animated slide with pinned image and text sliding in, revealed from the bottom"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter'"
   [exit]="'reveal-exit'"
   image="images/maksim-samuilionak-uymaeBza9KQ-unsplash.jpg"
@@ -90,7 +90,7 @@
 
 <app-animated-slide-dragging-text
   backgroundImage="images/tsuyoshi-kozu-BMk5PqDozE4-unsplash.jpg"
-  text="This is an animated slide with text sliding in, revealed from the bottom"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter'"
   [exit]="'reveal-top-exit'"
 ></app-animated-slide-dragging-text>
@@ -114,35 +114,35 @@
 
 <app-animated-slide-dragging-text
   backgroundImage="images/scott-lord-qV2xKnrSY6A-unsplash.jpg"
-  text="This is an animated slide with text sliding in, revealed from the top"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter-top'"
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-dragging-text
-  backgroundImage="images/tsuyoshi-kozu-BMk5PqDozE4-unsplash.jpg"
-  text="Animated slide with zoom out effect"
+  backgroundImage="images/ahmet-yuksek-txXfF_2YZpY-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [animation]="'zoom'"
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="This is an animated slide with pinned image and text sliding in, revealed from the bottom"
-  image="images/maksim-samuilionak-uymaeBza9KQ-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  image="images/evgeni-tcherkasski-aV9UbHhJdrA-unsplash.jpg"
   [animation]="'zoom'"
 ></app-animated-slide-pinned-image-dragging-text>
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="This is an animated slide with pinned image and text sliding in"
-  image="images/evgeni-tcherkasski-Ju7ZiCwu3DU-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  image="images/farid-karimi-BLasO3RP7H4-unsplash.jpg"
   [exit]="'reveal-top-exit'"
   [animation]="'zoom'"
 ></app-animated-slide-pinned-image-dragging-text>
 
 
 <app-animated-slide-dragging-text
-  backgroundImage="images/eric-stoynov-Asi4unAq4us-unsplash.jpg"
-  text="This is an animated slide with text sliding in, revealed from the top"
+  backgroundImage="images/karl-magnuson-LaHgrqo1ZRk-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter-top'"
   [exit]="'reveal-top-exit'"
   [animation]="'zoom'"
@@ -150,16 +150,16 @@
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="This is an animated slide with pinned image and text, revealed from the top"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter-top'"
   [exit]="'reveal-top-exit'"
   [animation]="'zoom'"
-  image="images/deep-doshi-U_Pjpti-LzM-unsplash.jpg"
+  image="images/steffen-schubert-9OK2g3t-o7k-unsplash.jpg"
 ></app-animated-slide-pinned-image-dragging-text>
 
 <app-animated-slide-dragging-text
-  backgroundImage="images/abdul-quadir-RHOA-WA3FtA-unsplash.jpg"
-  text="This is an animated slide with text sliding in, revealed from the top"
+  backgroundImage="images/wallace-henry-AJZ_75RTpL0-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter-top'"
   [exit]="'reveal-exit'"
   [animation]="'zoom'"
@@ -169,39 +169,39 @@
 <!--These two are bugged if z-index is not calculated and if there is no isAnimated=false-->
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="This is an animated slide with pinned image and text sliding in, revealed from the bottom"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter'"
   [exit]="'reveal-exit'"
   [animation]="'zoom'"
-  image="images/maksim-samuilionak-uymaeBza9KQ-unsplash.jpg"
+  image="images/wallace-henry-cyh6FKiuZKY-unsplash.jpg"
 ></app-animated-slide-pinned-image-dragging-text>
 
 <app-animated-slide-dragging-text
-  backgroundImage="images/tsuyoshi-kozu-BMk5PqDozE4-unsplash.jpg"
-  text="This is an animated slide with text sliding in, revealed from the bottom"
+  backgroundImage="images/wallace-henry-G-5JCERzbE8-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter'"
   [exit]="'reveal-top-exit'"
   [animation]="'zoom'"
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-dragging-text
-  backgroundImage="images/scott-lord-qV2xKnrSY6A-unsplash.jpg"
-  text="This is an animated slide with text sliding in, revealed from the top"
+  backgroundImage="images/wallace-henry-WHfpUNsHTdQ-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter-top'"
   [animation]="'zoom'"
 ></app-animated-slide-dragging-text>
 
 <app-animated-slide-pinned-image-dragging-text
   background="#2c3e50"
-  text="This is an animated slide with pinned image and text sliding in, revealed from the bottom"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [exit]="'reveal-exit'"
   [isAnimated]="false"
-  image="images/maksim-samuilionak-uymaeBza9KQ-unsplash.jpg"
+  image="images/jeremy-bishop-8xznAGy4HcY-unsplash.jpg"
 ></app-animated-slide-pinned-image-dragging-text>
 
 <app-animated-slide-dragging-text
-  backgroundImage="images/tsuyoshi-kozu-BMk5PqDozE4-unsplash.jpg"
-  text="This is an animated slide with text sliding in, revealed from the bottom"
+  backgroundImage="images/aperture-vintage-lUu3ooahScc-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
   [enter]="'reveal-enter'"
   [animation]="'zoom'"
 ></app-animated-slide-dragging-text>
