--- a/src/app/app.html
+++ b/src/app/app.html
@@ -206,6 +206,94 @@
   [animation]="'zoom'"
 ></app-animated-slide-dragging-text>
 
+<app-animated-slide-dragging-text
+  backgroundImage="images/eugene-golovesov-rPgkwnUEpjQ-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [animation]="'zoom-out'"
+></app-animated-slide-dragging-text>
+
+<app-animated-slide-pinned-image-dragging-text
+  background="#2c3e50"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  image="images/evgeni-tcherkasski-PP5hq8vZH8o-unsplash.jpg"
+  [animation]="'zoom-out'"
+></app-animated-slide-pinned-image-dragging-text>
+
+<app-animated-slide-pinned-image-dragging-text
+  background="#2c3e50"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  image="images/evgeni-tcherkasski-WXjHCVAps-I-unsplash.jpg"
+  [exit]="'reveal-top-exit'"
+  [animation]="'zoom-out'"
+></app-animated-slide-pinned-image-dragging-text>
+
+
+<app-animated-slide-dragging-text
+  backgroundImage="images/karolina-grabowska-MrbedyH1-jg-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [enter]="'reveal-enter-top'"
+  [exit]="'reveal-top-exit'"
+  [animation]="'zoom-out'"
+></app-animated-slide-dragging-text>
+
+<app-animated-slide-pinned-image-dragging-text
+  background="#2c3e50"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [enter]="'reveal-enter-top'"
+  [exit]="'reveal-top-exit'"
+  [animation]="'zoom-out'"
+  image="images/katie-mukhina-XwTdNWEzoR8-unsplash.jpg"
+></app-animated-slide-pinned-image-dragging-text>
+
+<app-animated-slide-dragging-text
+  backgroundImage="images/kristaps-ungurs-4orvBonHMGk-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [enter]="'reveal-enter-top'"
+  [exit]="'reveal-exit'"
+  [animation]="'zoom-out'"
+></app-animated-slide-dragging-text>
+
+<!--The following four were the most problematic-->
+<!--These two are bugged if z-index is not calculated and if there is no isAnimated=false-->
+<app-animated-slide-pinned-image-dragging-text
+  background="#2c3e50"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [enter]="'reveal-enter'"
+  [exit]="'reveal-exit'"
+  [animation]="'zoom-out'"
+  image="images/maeva-vigier-U34d_8zgMSk-unsplash.jpg"
+></app-animated-slide-pinned-image-dragging-text>
+
+<app-animated-slide-dragging-text
+  backgroundImage="images/nadine-marfurt-rBHDjvgld5c-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [enter]="'reveal-enter'"
+  [exit]="'reveal-top-exit'"
+  [animation]="'zoom-out'"
+></app-animated-slide-dragging-text>
+
+<app-animated-slide-dragging-text
+  backgroundImage="images/sam-goodgame-GBU2L01Yx-M-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [enter]="'reveal-enter-top'"
+  [animation]="'zoom-out'"
+></app-animated-slide-dragging-text>
+
+<app-animated-slide-pinned-image-dragging-text
+  background="#2c3e50"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [exit]="'reveal-exit'"
+  [isAnimated]="false"
+  image="images/scott-lord-pJh4ey_CcX4-unsplash.jpg"
+></app-animated-slide-pinned-image-dragging-text>
+
+<app-animated-slide-dragging-text
+  backgroundImage="images/venti-views-KAyZPC_Q5YM-unsplash.jpg"
+  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet, nunc vitae sagittis finibus, lectus justo cursus odio, sed aliquam tortor orci a ligula. Maecenas rhoncus, ex sed vulputate interdum, quam nunc cursus risus, ut scelerisque purus nunc non mi. Nam sit amet libero id nibh aliquam viverra sed vitae."
+  [enter]="'reveal-enter'"
+  [animation]="'zoom-out'"
+></app-animated-slide-dragging-text>
+
 
 
 
